--- a/src/Presentation/GlamourJewels.WebApi/GlamourJewels.WebApi.csproj
+++ b/src/Presentation/GlamourJewels.WebApi/GlamourJewels.WebApi.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Infrastructure\GlamourJewels.Infrastructure\GlamourJewels.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\GlamourJewels.Persistence\GlamourJewels.Persistence.csproj" />
   </ItemGroup>
