--- a/src/Presentation/GlamourJewels.WebApi/appsettings.json
+++ b/src/Presentation/GlamourJewels.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-6IFI2CF\\SQLEXPRESS;Database=GlamourJewelsAPIDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  },
   "AllowedHosts": "*"
 }
