--- a/src/Core/GlamourJewels.Application/GlamourJewels.Application.csproj
+++ b/src/Core/GlamourJewels.Application/GlamourJewels.Application.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <Folder Include="Abstracts\Repositories\" />
-    <Folder Include="Validations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
   </ItemGroup>
 
   <ItemGroup>
