created jwt token and refreshtoken

--- a/src/Presentation/GlamourJewels.WebApi/appsettings.json
+++ b/src/Presentation/GlamourJewels.WebApi/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-6IFI2CF\\SQLEXPRESS;Database=GlamourJewelsAPIDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   },
+  "JwtSettings": {
+    "SecretKey": "bXlTdXBlclNlY3JldEtleUAjMTIzIVN0cm9uZ1BBU1Mh",
+    "Issuer": "https://localhost:7027",
+    "Audience": "https://localhost:7027",
+    "ExpireMinutes": 60
+  },
   "AllowedHosts": "*"
 }
