writing email confirmed

--- a/src/Presentation/GlamourJewels.WebApi/appsettings.json
+++ b/src/Presentation/GlamourJewels.WebApi/appsettings.json
@@ -14,5 +14,13 @@
     "Audience": "https://localhost:7027",
     "ExpireMinutes": 60
   },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderName": "GlamourJewels",
+    "SenderEmail": "zulaoyuncusu00@gmail.com",
+    "Username": "Esmer Qedirli",
+    "Password": "nmmf mqvd icbt adwq"
+  },
   "AllowedHosts": "*"
 }
