--- a/src/Core/GlamourJewels.Application/GlamourJewels.Application.csproj
+++ b/src/Core/GlamourJewels.Application/GlamourJewels.Application.csproj
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstracts\Repositories\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.0" />
   </ItemGroup>
 
